--- a/APPVIEW/Views/Bill/GetList.cshtml
+++ b/APPVIEW/Views/Bill/GetList.cshtml
@@ -72,14 +72,13 @@
                             Ngày tạo
                         </th>
 
-                        <th>
-                            
-                            ngày thanh toán
+                        <th>                           
+                            Ngày thanh toán
                         </th>
 
                         <th>
                             
-                            trạng thái
+                            Trạng thái
                         </th>
                         <th></th>
                     </tr>
